--- a/assets/style.css
+++ b/assets/style.css
@@ -1,16 +1,17 @@
 @font-face {
     font-family: 'icomoon';
-    src:  url('fonts/icomoon.eot?c7rlk9');
-    src:  url('fonts/icomoon.eot?c7rlk9#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?c7rlk9') format('truetype'),
-    url('fonts/icomoon.woff?c7rlk9') format('woff'),
-    url('fonts/icomoon.svg?c7rlk9#icomoon') format('svg');
+    src: url('fonts/icomoon.eot?c7rlk9');
+    src: url('fonts/icomoon.eot?c7rlk9#iefix') format('embedded-opentype'),
+        url('fonts/icomoon.ttf?c7rlk9') format('truetype'),
+        url('fonts/icomoon.woff?c7rlk9') format('woff'),
+        url('fonts/icomoon.svg?c7rlk9#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="icon-"],
+[class*=" icon-"] {
     /* use !important to prevent issues with browser extensions that change fonts */
     font-family: 'icomoon' !important;
     speak: never;
@@ -28,42 +29,57 @@
 .icon-next:before {
     content: "\ea24";
 }
+
 .icon-facebook:before {
     content: "\ea90";
 }
+
 .icon-whatsapp:before {
     content: "\ea93";
 }
+
 .icon-twitter:before {
     content: "\ea96";
 }
+
 .icon-linkedin2:before {
     content: "\eaca";
 }
+
 .icon-pinterest:before {
     content: "\ead1";
 }
 
-.social_icon [class^="icon-"], [class*=" icon-"]{
+.social_icon [class^="icon-"],
+[class*=" icon-"] {
     font-size: 25px;
 }
-.icon-facebook{
+
+.icon-facebook {
     color: #43609c;
 }
-.icon-twitter{
+
+.icon-twitter {
     color: #1da1f2;
 }
-.icon-pinterest{
+
+.icon-pinterest {
     color: #C92228;
 }
-.icon-linkedin2{
+
+.icon-linkedin2 {
     color: #0077B5;
 }
-.icon-whatsapp{
+
+.icon-whatsapp {
     color: #34AF23;
 }
 
-a.css_share_icon img {max-width: 100%;width: 20px !important;}
+a.css_share_icon img {
+    max-width: 100%;
+    width: 20px !important;
+}
+
 a.css_share_icon {
     padding: 10px;
     border: 1px solid #9e9e9e;
@@ -80,13 +96,16 @@ a.css_share_icon {
     margin: 3px 5px;
     transition: all .2s ease-in;
 }
-a.css_share_icon:hover{
+
+a.css_share_icon:hover {
     background: #fff;
     box-shadow: 0px 0px 5px #00000087;
 }
+
 .css_social_items {
     display: flex;
 }
+
 .float-left-share {
     position: fixed;
     left: 0;
@@ -95,9 +114,11 @@ a.css_share_icon:hover{
     width: 48px !important;
     z-index: 1;
 }
-.float-left-share *{
+
+.float-left-share * {
     transition: all .2s ease-in-out;
 }
+
 .float-left-share .css_social_items {
     flex-direction: column;
     background: #ccc;
@@ -118,17 +139,22 @@ a.css_share_icon:hover{
     margin-top: 6px;
     background: #c1c1c1;
     padding: 8px 0;
-    border-radius: 0 10px  10px  0;
+    border-radius: 0 10px 10px 0;
     height: 24px;
     cursor: pointer;
     align-items: center;
 }
-.css_social_items.hide {transform: translateX(-50px);}
+
+.css_social_items.hide {
+    transform: translateX(-50px);
+}
+
 .nav_icon.hide {
     transform: translateX(-29px);
     justify-content: end;
     padding-right: 4px;
 }
+
 .nav_icon.hide span {
     transform: rotate(0);
 }
